kelas istio/02. Traffic management/a. fault injection/review/vs-fault-injection-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
  - fault:
      abort:
        percentage:
          value: 50
        httpStatus: 500 # internal server error
    route:
    - destination:
        host: review.default.svc.cluster.local
