kelas istio/02. Traffic management/a. fault injection/review/vs-fault-injection-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
  - fault:
      delay:
        percentage:
          value: 50
        fixedDelay: 10s
    route:
    - destination:
        host: review.default.svc.cluster.local
